--- a/11 Floats/index.html
+++ b/11 Floats/index.html
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="block left">Float</div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dicta
-      voluptatibus quaerat veniam rerum rem labore dignissimos provident
-      corporis laborum.
-    </p>
-    <p>
-      Saepe sit tempora, maiores ad dicta veritatis deserunt dignissimos animi
-      commodi hic sint sed doloremque sapiente accusantium vitae totam
-      doloribus.
-    </p>
-    <p>
-      Aliquid vitae atque porro dolore officiis? Qui magni dignissimos obcaecati
-      alias doloremque, et, molestias error repudiandae vel soluta voluptates
-      accusamus!
-    </p>
-    <div class="block right">Float</div>
-    <p>
-      Nostrum reiciendis perspiciatis ex velit ea, quia praesentium saepe,
-      commodi accusamus, ratione laudantium dolore esse deleniti sit tempora
-      facilis placeat.
-    </p>
-    <p>
-      Nemo veniam tempora itaque quo esse deserunt deleniti rem labore dicta
-      maxime velit voluptas, pariatur fugit nam at qui nesciunt.
-    </p>
+    <div class="container">
+      <div class="block left">Float</div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dicta
+        voluptatibus quaerat veniam rerum rem labore dignissimos provident
+        corporis laborum.
+      </p>
+      <p>
+        Saepe sit tempora, maiores ad dicta veritatis deserunt dignissimos animi
+        commodi hic sint sed doloremque sapiente accusantium vitae totam
+        doloribus.
+      </p>
+    </div>
+    <div class="container">
+      <p>
+        Aliquid vitae atque porro dolore officiis? Qui magni dignissimos
+        obcaecati alias doloremque, et, molestias error repudiandae vel soluta
+        voluptates accusamus!
+      </p>
+      <div class="block right">Float</div>
+      <p>
+        Nostrum reiciendis perspiciatis ex velit ea, quia praesentium saepe,
+        commodi accusamus, ratione laudantium dolore esse deleniti sit tempora
+        facilis placeat.
+      </p>
+      <p>
+        Nemo veniam tempora itaque quo esse deserunt deleniti rem labore dicta
+        maxime velit voluptas, pariatur fugit nam at qui nesciunt.
+      </p>
+    </div>
   </body>
 </html>
